Fix options overflow

--- a/assets/styles/layout/_options.scss
+++ b/assets/styles/layout/_options.scss
@@ -61,7 +61,7 @@
   &__main {
     justify-content: start;
     overflow: hidden;
-    overflow-x: hidden;
+    overflow-x: auto;
   }
 
   &__title {
